fix: add text-align in blocks and fix button submit in form

--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ body{
     letter-spacing: 1.05px;
     word-spacing: -0.2px;
     line-height: 31px;
+    text-align: justify;
 
 }
 .services__content__menu{
@@ -192,6 +193,7 @@ body{
     width: 230px;
     height: 85px;
     overflow: hidden;
+    text-align: justify;
 }
 .services_bottom-line{
     height: 6px;
@@ -293,6 +295,7 @@ body{
     color: #767e9e;
     font-family: "lato-light";
     margin-bottom: 35px;
+    text-align: justify
 }
 .abot-us__persons{
     padding-left: 63px;
@@ -309,6 +312,7 @@ body{
     font-size: 1.11em;
     margin-top: 15px;
     overflow: hidden;
+    white-space: nowrap;
 }
 .abot-us__persons_item p{
     font-size: 0.76em;
@@ -317,6 +321,8 @@ body{
     color: #767e9e;
     margin-top: 10px;
     margin-bottom: 24px;
+    text-align: justify;
+    
 }
 .abot-us__persons_item_network{
     margin-bottom: 53px;
@@ -358,6 +364,7 @@ body{
     line-height: 30px;
     margin-top: 20px;
     margin-left: 40px;
+    text-align: justify
 }
 .quota__main{
     margin-top: 35px;
@@ -436,6 +443,7 @@ input:invalid:not(:placeholder-shown) {
     font-size: 0.77em;
     line-height: 21px;
     color: #f0d8d9;
+    text-align: justify
 }
 .quota__main__contact-info__contacts{
     margin-top: 27px;
